# curate

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  check.yml  deploy.yml  lint.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SPEC.md  SPECIFICATION.md
infra/: main.bicep
infra/modules/: app-configuration.bicep  app-insights.bicep  container-apps-web.bicep  container-apps-worker.bicep  container-apps.bicep  cosmos-db.bicep  log-analytics.bicep  storage-account.bicep
infra/params/: dev.bicepparam  prod.bicepparam
prompts/: draft.md  edit.md  fetch.md  orchestrator.md  publish.md  review.md
src/agent_stack/: app.py  config.py  startup.py
src/agent_stack/agents/: draft.py  edit.py  fetch.py  llm.py  memory.py  middleware.py  publish.py  registry.py  review.py
src/agent_stack/auth/: middleware.py  msal_auth.py
src/agent_stack/database/: client.py
src/agent_stack/database/repositories/: agent_runs.py  base.py  editions.py  feedback.py  links.py
src/agent_stack/events/: __init__.py
src/agent_stack/models/: agent_run.py  feedback.py  link.py
src/agent_stack/pipeline/: change_feed.py  orchestrator.py  rendering.py  runs.py  tools.py
src/agent_stack/routes/: agent_runs.py  agents.py  auth.py  dashboard.py  editions.py  events.py  feedback.py  links.py  settings.py  status.py
src/agent_stack/services/: __init__.py  agent_runs.py  dashboard.py  editions.py  feedback.py  health.py  links.py  memory.py
src/agent_stack/storage/: blob.py  renderer.py
templates/: agents.html  base.html  dashboard.html  edition_detail.html  editions.html  links.html  profile.html  settings.html  status.html  store.html  workspace.html
templates/errors/: 503.html
templates/newsletter/: edition.html  index.html
templates/partials/: edition_title.html  link_progress.html  memory_list.html  memory_toggle.html
tests/: __init__.py  conftest.py  test_config.py  test_startup.py
tests/agents/: test_draft.py  test_edit.py  test_fetch.py  test_llm.py  test_memory.py  test_middleware.py  test_models.py  test_prompts.py  test_publish.py  test_registry.py  test_review.py
tests/auth/: test_msal_auth.py  test_require_auth.py
tests/common/: test_config.py  test_registry.py
tests/common/database/: test_agent_run_repository.py  test_base_repository.py  test_cosmos_client.py  test_edition_repository.py  test_feedback_repository.py  test_link_repository.py
tests/common/storage/: test_blob.py  test_publish_flow.py  test_renderer.py
tests/database/: test_agent_run_repository.py  test_base_repository.py  test_cosmos_client.py  test_edition_repository.py
tests/events/: test_event_manager.py
tests/integration/: test_pipeline.py
tests/pipeline/: test_change_feed.py  test_change_feed_processor.py  test_orchestrator.py
tests/routes/: test_agent_runs.py  test_agents.py  test_auth.py  test_editions.py  test_events.py  test_events_route.py  test_feedback.py  test_links.py  test_settings.py  test_status.py
tests/services/: test_agent_runs.py  test_dashboard.py  test_health.py  test_memory.py
tests/storage/: test_blob.py  test_publish_flow.py  test_renderer.py
tests/web/: test_request_diagnostics.py  test_startup.py
tests/web/auth/: test_middleware.py  test_msal_auth.py  test_require_auth.py
tests/web/events/: test_event_manager.py
tests/web/routes/: runtime_helpers.py  test_agent_runs.py  test_agents.py  test_auth.py  test_dashboard.py  test_editions.py  test_events.py  test_feedback.py  test_links.py  test_profile.py  test_settings.py  test_status.py
tests/web/services/: test_agent_runs.py  test_dashboard.py  test_health.py  test_memory.py  test_revisions.py
tests/worker/agents/: test_draft.py  test_edit.py  test_fetch.py  test_llm.py  test_memory.py  test_middleware.py  test_models.py  test_prompts.py  test_publish.py  test_review.py
tests/worker/integration/: test_pipeline.py
tests/worker/pipeline/: test_change_feed_processor.py  test_orchestrator.py  test_tools.py
