[project]
name = "agent-stack"
version = "0.1.0"
description = "An event-driven, agent-powered editorial pipeline for The Agent Stack newsletter."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "azure-cosmos>=4.14.6",
    "agent-framework-core>=1.0.0rc1",
    "msal>=1.34.0",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
    "azure-identity>=1.25.2",
    "azure-storage-blob>=12.28.0",
    "azure-appconfiguration>=1.8.0",
    "sse-starlette>=3.2.0",
    "python-dotenv>=1.2.1",
    "aiohttp>=3.13.3",
    "azure-monitor-opentelemetry>=1.8.6",
]

[project.scripts]
agent-stack = "agent_stack.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_stack"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # conflicts with ruff formatter
    "D203",    # conflicts with D211
    "D213",    # conflicts with D212
    # --- Phase 6: Exception messages ---
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "TRY003",  # raise-vanilla-args
    # --- S101: pytest requires assert ---
    "S101",    # assert
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pylint]
max-args = 7

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that exercise multiple components together",
]

[tool.coverage.run]
source = ["agent_stack"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
