[project]
name = "curate"
version = "0.1.0"
description = "An event-driven, agent-powered editorial pipeline."
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "curate-common",
    "curate-web",
    "curate-worker",
    "foundry-local-sdk>=0.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.uv]
prerelease = "allow"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
curate-common = { workspace = true }
curate-web = { workspace = true }
curate-worker = { workspace = true }

[tool.ruff]
src = ["packages/curate-common/src", "packages/curate-web/src", "packages/curate-worker/src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pylint]
max-args = 8

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that exercise multiple components together",
]

[tool.coverage.run]
source = ["curate_common", "curate_web", "curate_worker"]
omit = ["packages/curate-web/src/curate_web/app.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
